[package]
name = "memlib"
version = "0.1.0"
authors = ["Ryan McCrystal <rrmccrystal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
32-bit = []
internal = []

[dependencies]
log = "0.4.8"
regex = "1.3.9"
impl_ops = "0.1.1"
pretty-hex = "0.1.1"
colored = "2.0.0"
serde = { version = "1.0.114", features = ["derive"] }
lazy_static = "1.4.0"
anyhow = "1.0.37"
parking_lot = "0.11.1"
linreg = "0.2.0"
failure = "0.1.8"
[target.'cfg(target_os = "windows")'.dependencies]
kernel-client = { path = "../kernel-rs/client" }
winapi = { version = "0.3.9", features = ["std", "memoryapi", "processthreadsapi", "tlhelp32", "ntdef", "handleapi", "windef", "winuser", "d3d11", "dxgi", "dxgitype", "dwmapi", "uxtheme", "d3d9caps", "synchapi", "wow64apiset", "wingdi"] }
winutil = { path = "../winutil" }
[target.'cfg(target_os = "linux")'.dependencies]
vmread = "0.1.5"
enigo = "0.0.14"