[package]
name = "memlib"
version = "0.1.0"
edition = "2021"

[dependencies]
dataview = "0.1.2"
obfstr = "0.3.0"
anyhow = { version = "1.0.54", default-features = false }
log = { version = "0.4.14", default-features = false }
ntapi = "0.3.7"
winapi = { version = "0.3.9", features = ["processthreadsapi"] }
widestring = { version = "0.5.1", default-features = false, features = ["alloc"] }

