[package]
name = "memlib"
version = "0.1.2"
edition = "2021"
authors = ["Ryan McCrystal"]
readme = "README.md"
repository = "https://github.com/rmccrystal/memlib-rs"
license = "MIT"
description = "An abstraction layer for interacting with memory"

[features]
kernel = []
render = []
test = ["env_logger", "log"]

[dependencies]
dataview = "1"
auto_impl = "0.5.0"
bitflags = "1.3.2"

env_logger = { version = "0.9.0", optional = true }
log = { version = "0.4.16", optional = true }