[package]
name = "dumper"
version = "0.1.0"
authors = ["Ryan McCrystal <rrmccrystal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memlib = { path = "../" }
object = "0.23.0"
anyhow = "1.0.38"
log = "0.4.14"