[package]
name = "page-verification-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memlib = { git = "https://github.com/rmccrystal/memlib-rs" }
log = "0.4.17"
windows = { version = "0.38.0", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_System_Threading"] }
anyhow = "1.0.58"

[dev-dependencies]
libvoyager = { path = "../../rgh/voyager-rs/libvoyager" }
pretty_env_logger = "0.4.0"
