[package]
name = "system-host"
version = "0.1.0"
authors = ["Ryan McCrystal <rrmccrystal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = "0.3.9"
log = "*"
tarpc = [ version = "0.21.0", features = ["full"] ]
