[package]
name = "system-host"
version = "0.1.0"
authors = ["Ryan McCrystal <rrmccrystal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "*", features = ["impl-default", "winuser", "errhandlingapi"] }
enigo = "0.0.14"
log = "*"
simplelog = "0.8.0"
tarpc = { version = "0.21.0", features = ["full"] }
futures = "0.3.5"
serde = "1.0.114"
tokio = { version = "0.2.22", features = ["macros"] }
tokio-serde = { version = "0.6.1", features = ["bincode", "json"] }
